--- a/splain.1
+++ b/splain.1
@@ -61,3 +61,7 @@ The splain(1) project is an Apache 2 licensed project, all contributions are wel
 
 If you would like to report a bug, please file a bug report in the official repository.
 
+.SH INSPIRATION
+.PP
+
+Inspired by Mike Splain.
