Fix a very minor typo
This commit fixes a typo that is arguably very minor.

It affects only one character, and doesn't change the general meaning of the paragraph where it is located.

The character is added, resulting in a slightly longer line.

<3

--- a/splain.1
+++ b/splain.1
@@ -20,7 +20,7 @@ ridiculous mansplaining actually is.
 
 The splain(1) project was started in a gallant effort to over emphasize
 the sheer absurdity of over explaining a technical tool. The tool is simple,
-elegant, and unique. It use a shell wrapper (you do know what a shell is right?)
+elegant, and unique. It uses a shell wrapper (you do know what a shell is right?)
 to wrap a native utility called man(1).
 
 The wrapper is executed after the splain executable has been loaded into a user's $PATH.
